in case it's not obvious

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -473,6 +473,7 @@ button.close {
     }
 }
 
+/* ipc-group = image preview container group */
 .ipc-group {
     border: solid 1px $medium-grey;
     border-left: solid 1px $medium-grey;
