--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -89,15 +89,21 @@
   //called immediately below and in restartInfiniteSCroll
   function startInfiniteScroll(){
       $('#postsContainer').infiniteScroll({
+          //infinite scroll loading is timestamp based; we want to load posts just older than the oldest post yet loaded, or we use the current time as a placeholder value
+          //if we've just gotten to this page, or if we've just made a post the feed is emptied and needPostsOlderThan is set so that the new post loads on top of the feed
           path: function() {
+              if($(".oldesttimestamp").length){
+                //if there are posts on the page, the server has provided the timestamp of the oldest post yet loaded in a hidden element that we will find here
+                return '/showposts/home/{{loggedInUserData._id}}/' + $(".oldesttimestamp").last().html();
+              }
+              //this is for when the feed is currently empty and is being loaded/reloaded
               return '/showposts/home/{{loggedInUserData._id}}/' + needPostsOlderThan;
           },
           append: '.post',
-          prefill: false, //bc it was acting up and i haave no idea why
+          prefill: true,
           history: true,
           status: '.page-load-status'
       });
   }
   startInfiniteScroll(true);
-  $('#postsContainer').infiniteScroll("loadNextPage");
 </script>
