--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -163,7 +163,7 @@
         </section>
     {{/unless}}
     {{#if @last}}
-    <div id="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
+    <div class="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
     {{/if}}
 </article>
 {{/each}}
