--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -1,4 +1,4 @@
-<div class="modal fade" id="editPostModal" tabindex="-1" role="dialog" aria-labelledby="editPostModalLabel" aria-hidden="true" data-post-id="{{postID}}" data-original-privacy="{{privacy}}">
+<div class="modal fade" id="editPostModal" tabindex="-1" role="dialog" aria-labelledby="editPostModalLabel" aria-hidden="true"{{#if isDraft}} data-is-draft="true"{{/if}} data-post-id="{{postID}}" data-original-privacy="{{privacy}}">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -30,8 +30,12 @@
                 <div class="switch-field" id="editVisibilityControls">
                   <input type="radio" id="editPostPrivacy-public" name="editPostPrivacy" value="public" {{#eq privacy "public"}}checked{{/eq}} />
                   <label for="editPostPrivacy-public" id="publicPrivacyLabel"><i class='fas fa-eye'></i></label>
-                  <input type="radio" id="editPostPrivacy-private" name="editPostPrivacy" value="private" {{#eq privacy "private"}}checked{{/eq}}/>
+                  <input type="radio" id="editPostPrivacy-private" name="editPostPrivacy" value="private" {{#eq privacy "private"}}{{#if isDraft}}{{else}}checked{{/if}}{{/eq}}/>
                   <label for="editPostPrivacy-private" id="privatePrivacyLabel"><i class='fas fa-eye-slash'></i></label>
+                  {{#if isDraft}} {{! only posts that are already drafts can be edited and then saved as drafts }}
+                  <input type="radio" id="editPseudoPrivacy-draft" name="editPostPrivacy" value="draft" checked/>
+                  <label for="editPseudoPrivacy-draft" id="draftLabel"><i class='fas fa-drafting-compass'></i></label>
+                  {{/if}}
                 </div>
               </div>
               {{/unless}}
