--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -321,7 +321,7 @@ $("body").on('keyup',"#linkPreviewUrlEntry", function(e){
         if(!$("#pseudoPrivacy-draft").is(":checked") || draftsMode){
           restartInfiniteScroll(postTimestamp) //we'll requests posts older than that specific timestamp, so the new post should always be on top, with any even newer posts not shown.
         }else{
-          innerEditor.attr("data-placeholder", "Post saved to drafts");
+          innerEditor.attr("data-placeholder", 'Post saved to drafts. View it by going to your profile page and clicking the "drafts" button by your profile picture.');
           innerEditor.focus(function(){
             innerEditor.attr("data-placeholder", editor[0].__quill.options.placeholder); //it's late. this will retrieve the editor's original placeholder
           })
