fix feed reset logic

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -119,6 +119,7 @@
               $(this).html('<i class="fas fa-drafting-compass"></i> Drafts');
               restartInfiniteScroll();
             }
+            //todo: scroll down to post container if it's currently off-screen
         })
     })
     {{/if}}
