--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -318,10 +318,15 @@ $("body").on('keyup',"#linkPreviewUrlEntry", function(e){
         $(".link-form-cont").slideUp("fast");
         var innerEditor = editor.find(".ql-editor");
         innerEditor.html("");
+        //restart the feed to show the new post, unless we've just created a draft and aren't currently looking at our drafts and thus won't see it anyway, in which case just display a message talking about the draft in the editor
         if(!$("#pseudoPrivacy-draft").is(":checked") || (typeof draftsMode!="undefined" && draftsMode)){
+          if(!$("#pseudoPrivacy-draft").is(":checked") && typeof draftsMode!= "undefined" && draftsMode){
+            //if we've just created a regular post and are currently looking at our drafts, we need to switch to looking at regular posts to see our new post
+            draftsMode = false;
+          }
           restartInfiniteScroll(postTimestamp) //we'll requests posts older than that specific timestamp, so the new post should always be on top, with any even newer posts not shown.
         }else{
-          innerEditor.attr("data-placeholder", 'Post saved to drafts. View it by going to your profile page and clicking the "drafts" button by your profile picture.');
+          innerEditor.attr("data-placeholder", 'Post saved to drafts. View it by going to your profile page and clicking the "drafts" button by your profile picture.'); //todo: shorten (at least for mobile)
           innerEditor.focus(function(){
             innerEditor.attr("data-placeholder", editor[0].__quill.options.placeholder); //it's late. this will retrieve the editor's original placeholder
           })
